--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parma 2027 - Perfect Mobile & Desktop</title>
+    <title>Parma 2027 - Ultimate Layering Fix</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -75,6 +75,8 @@
         justify-content: center;
         flex-shrink: 0;
         border-radius: 24px 24px 0 0;
+        position: relative;
+        z-index: 50; /* Toolbar sempre sopra */
       }
       .window-title {
         font-size: 0.8rem;
@@ -90,19 +92,22 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        overflow-y: auto;
-        overflow-x: hidden;
+        overflow: hidden; /* Il contenuto principale non deve scrollare, lo fa il container interno */
       }
 
+      /* HEADER POSIZIONATO ASSOLUTO - Sta "sotto" l'area di scroll visiva */
       .page-header {
-        padding-top: 20px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        padding-top: 30px;
         padding-bottom: 10px;
         text-align: center;
-        flex-shrink: 0;
-        position: relative;
-        z-index: 1; /* Basso livello per stare sotto ai pianeti */
+        z-index: 1; /* Livello basso */
         padding-left: 20px;
         padding-right: 20px;
+        pointer-events: auto; /* Cliccabile */
       }
       h1 {
         margin: 0;
@@ -124,43 +129,37 @@
         line-height: 1.5;
       }
 
+      .scroll-indicator-box {
+        position: relative;
+        z-index: 10; /* Assicura che il pulsante sia cliccabile */
+      }
+
+      /* CONTAINER A TUTTA ALTEZZA */
       .scroll-container {
-        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
         display: flex;
         align-items: center;
         overflow-x: auto;
-        overflow-y: visible;
+        overflow-y: visible; /* Fondamentale */
 
-        /* PADDING STANDARD (DESKTOP) */
-        padding-top: 100px;
-        padding-bottom: 150px;
+        /* Padding massiccio per spingere la timeline sotto l'header */
+        padding-top: 250px;
+        padding-bottom: 100px;
+
+        z-index: 2; /* Sta SOPRA l'header */
+        pointer-events: none; /* Lascia passare i click attraverso lo spazio vuoto */
 
         scroll-snap-type: x mandatory;
         scroll-behavior: smooth;
       }
 
-      /* MEDIA QUERY MOBILE: PIÙ SPAZIO IN ALTO PER NON TAGLIARE L'ICONA */
-      @media (max-width: 768px) {
-        .scroll-container {
-          /* Aumento a 170px per spingere la timeline sotto il pulsante "Scorri" */
-          padding-top: 170px;
-          padding-bottom: 120px;
-        }
-      }
-
-      .scroll-container::-webkit-scrollbar {
-        height: 12px;
-      }
-      .scroll-container::-webkit-scrollbar-thumb {
-        background-color: var(--parma-blue);
-        border-radius: 10px;
-        border: 3px solid white;
-      }
-      .scroll-container::-webkit-scrollbar-track {
-        background: rgba(0, 0, 0, 0.05);
-      }
-
+      /* Riattiviamo i click sugli oggetti interni */
       .universe {
+        pointer-events: auto;
         display: flex;
         align-items: center;
         position: relative;
@@ -171,12 +170,31 @@
         padding-right: 50vw;
       }
 
+      /* MEDIA QUERY MOBILE */
       @media (max-width: 768px) {
-        /* Meno padding a sinistra su mobile per iniziare prima */
+        .scroll-container {
+          padding-top: 280px; /* Ancora più spazio su mobile */
+          padding-bottom: 120px;
+        }
         .universe {
           padding-left: calc(50vw - 160px);
           padding-right: calc(50vw - 160px);
         }
+      }
+
+      .scroll-container::-webkit-scrollbar {
+        height: 12px;
+      }
+      .scroll-container::-webkit-scrollbar-thumb {
+        background-color: var(--parma-blue);
+        border-radius: 10px;
+        border: 3px solid white;
+        cursor: pointer;
+        pointer-events: auto;
+      }
+      .scroll-container::-webkit-scrollbar-track {
+        background: rgba(0, 0, 0, 0.05);
+        pointer-events: auto;
       }
 
       .timeline-line {
@@ -211,7 +229,7 @@
         transform-style: preserve-3d;
       }
 
-      /* QUANDO ATTIVO: Sale sopra a tutto */
+      /* Sale sopra a tutto quando attivo */
       .sun-system.active {
         z-index: 99999 !important;
       }
@@ -268,7 +286,6 @@
         text-transform: none;
       }
 
-      /* SATELLITE WRAPPER */
       .sat-wrapper {
         position: absolute;
         top: 50%;
@@ -292,7 +309,6 @@
         pointer-events: auto;
       }
 
-      /* Se contiene una card attiva, porta tutto in primo piano sopra il pulsante */
       .sat-wrapper:has(.satellite-body.active) {
         z-index: 100 !important;
       }
@@ -677,10 +693,7 @@
 
       function attachInteractions() {
         document.getElementById("scroll-btn").addEventListener("click", () => {
-          // SCROLL CALIBRATO
-          // Ogni sistema solare è largo 320px.
-          // Su mobile e desktop lo scroll deve essere pari a 320px per centrare il prossimo.
-          const scrollAmount = 320;
+          const scrollAmount = window.innerWidth < 768 ? 260 : 320;
           document
             .querySelector(".scroll-container")
             .scrollBy({ left: scrollAmount, behavior: "smooth" });
