--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
         <div class="window-content">
             <div class="page-header">
                 <h1>PARMA 2027</h1>
-                <p>Una prima prova di pianificazione di contenuti a partire dai prossimi eventi. Clicca su evento e su ogni icona per vedere le varie azioni di comunicazione da sviluppare.</p>
+                <p>Una prima prova di pianificazione di contenuti a partire dai prossimi eventi. 
+                    Clicca su ogni evento e su ogni icona per vedere le varie azioni di comunicazione da sviluppare.</p>
             </div>
 
             <div class="controls-layer" id="controls-box">
